# cinder-nature-of-code

./: .gitignore  CMakeLists.txt  README.md  generate_example.sh
chapter00/example_0_1/: CMakeLists.txt
chapter00/example_0_2/: CMakeLists.txt
chapter00_randomness/example_0_1/: CMakeLists.txt
chapter00_randomness/example_0_1/include/: Walker.h
chapter00_randomness/example_0_1/src/: example_0_1.cpp
chapter00_randomness/example_0_2/: CMakeLists.txt
chapter00_randomness/example_0_2/src/: example_0_2.cpp
chapter00_randomness/example_0_3/: CMakeLists.txt
chapter00_randomness/example_0_3/include/: WeightedWalker.h
chapter00_randomness/example_0_3/src/: example_0_3.cpp
chapter00_randomness/example_0_4/: CMakeLists.txt
chapter00_randomness/example_0_4/src/: example_0_4.cpp
chapter00_randomness/example_0_5/: CMakeLists.txt
chapter00_randomness/example_0_5/src/: example_0_5.cpp
chapter00_randomness/example_0_6/: CMakeLists.txt
chapter00_randomness/example_0_6/include/: PerlinWalker.h
chapter00_randomness/example_0_6/src/: example_0_6.cpp
chapter00_randomness/exercise_0_3/: CMakeLists.txt
chapter00_randomness/exercise_0_3/include/: SteeredWalker.h
chapter00_randomness/exercise_0_3/src/: exercise_0_3.cpp
include/: utilities.h
